WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82559
Fix a crash and an assertion when recovering from a web process crash
https://bugs.webkit.org/show_bug.cgi?id=82559
Summary
Fix a crash and an assertion when recovering from a web process crash
Anders Carlsson
Reported
2012-03-28 18:07:44 PDT
Fix a crash and an assertion when recovering from a web process crash
Attachments
Patch
(1.87 KB, patch)
2012-03-28 18:08 PDT
,
Anders Carlsson
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-03-28 18:08:49 PDT
Created
attachment 134459
[details]
Patch
Mark Rowe (bdash)
Comment 2
2012-03-28 18:10:13 PDT
Comment on
attachment 134459
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=134459&action=review
> Source/WebKit2/UIProcess/API/mac/WKView.mm:2932 > + if (_data->_page->drawingArea()) > + _data->_page->drawingArea()->waitForPossibleGeometryUpdate();
Maybe introduce a local to avoid dereferencing / calling _data->_page->drawingArea() twice in a row?
Anders Carlsson
Comment 3
2012-03-28 18:51:03 PDT
Committed
r112491
: <
http://trac.webkit.org/changeset/112491
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug