Fix a crash and an assertion when recovering from a web process crash https://bugs.webkit.org/show_bug.cgi?id=82559 <rdar://problem/10902574>

Reviewed by Mark Rowe.

* UIProcess/API/mac/WKView.mm:
(-[WKView _processDidCrash]):
If we're currently in accelerated compositing mode, exit.

(-[WKView updateLayer]):
Guard against a null drawing area.

git-svn-id: svn://svn.chromium.org/blink/trunk@112491 bbb929c8-8fbe-4397-9dbb-9b2b20218538