third_party/WebKit/Source/WebKit2/UIProcess/API/mac/WKView.mm
@@ -2217,6 +2217,9 @@ static void drawPageBackground(CGContextRef context, WebPageProxy* page, const I
 
 - (void)_processDidCrash
 {
+    if (_data->_layerHostingView)
+        [self _exitAcceleratedCompositingMode];
+
     [self _updateRemoteAccessibilityRegistration:NO];
 }
 
@@ -2925,7 +2928,9 @@ static NSString *pathWithUniqueFilenameForPath(NSString *path)
 - (void)updateLayer
 {
     self.layer.backgroundColor = CGColorGetConstantColor(kCGColorWhite);
-    _data->_page->drawingArea()->waitForPossibleGeometryUpdate();
+
+    if (DrawingAreaProxy* drawingArea = _data->_page->drawingArea())
+        drawingArea->waitForPossibleGeometryUpdate();
 }
 #endif
 
